# rust-examples

./: .gitignore  README.md  rust_test_script.bash
conway/: Cargo.toml  README.md
conway/src/: lib.rs  main.rs
ed25519/: Cargo.toml  README.md
ed25519/src/: main.rs
factorial/: Cargo.toml  README.md
factorial/src/: main.rs
fibonacci/: Cargo.toml  README.md
fibonacci/.cargo/: config.toml
fibonacci/src/: main.rs
fizzbuzz/: Cargo.toml  README.md
fizzbuzz/src/: main.rs
grep/: Cargo.toml  README.md
grep/src/: main.rs
guessing_game/: Cargo.toml  README.md
guessing_game/src/: main.rs
hello_world/: Cargo.toml  README.md
hello_world/src/: main.rs
json_contains/: Cargo.toml  README.md
json_contains/src/: main.rs
keccak/: Cargo.toml  README.md
keccak/src/: main.rs
my-project/: Cargo.toml  README.md
my-project/src/: main.rs
nqueens/: Cargo.toml  README.md
nqueens/src/: main.rs
palindrome/: Cargo.toml  README.md
palindrome/src/: main.rs
prime_factorization/: Cargo.toml  README.md
prime_factorization/.cargo/: config.toml
prime_factorization/src/: lib.rs  main.rs
secp256k1/: Cargo.toml  README.md  compile.sh
secp256k1/src/: main.rs
sha256/: Cargo.toml  README.md
sha256/src/: main.rs
simple-calculator/: README.md
simple_calculator/: Cargo.toml  README.md
simple_calculator/src/: main.rs
sudoku/: Cargo.toml  README.md
sudoku/src/: main.rs
test_data/grep/: input
test_data/guessing_game/: expected_output
test_data/json_contains/: input
testing/: Cargo.toml
unit_tests/: Cargo.toml  README.md
(+6 files in other folders)
