[package]
name = "json_contains"
version = "0.1.0"
edition = "2021"

[dependencies]
entrypoint = { git = "https://github.com/lita-xyz/valida-rs.git", branch = "read-write-impl" }
serde_json = { version = "1", no-default-features = true }
serde = { version = "1", no-default-features = true, features = ["derive"] }
jsonpath_lib = "0.3.0"
