[package]
name = "secp256k1-example"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(not(target_arch = "valida"))'.dependencies]
secp256k1 = { version = "0.29.1", features = ["rand-std", "hashes"] }

[target.'cfg(target_arch = "valida")'.dependencies]
secp256k1 = { version = "0.29.1", features = ["hashes"] }
